# peshell_minimal

./: .clang-format  .gitignore  .gitmodules  .luacheckrc  CMakeLists.txt  get_latest_build.sh  log  peshell-minimal-dev-1.rockspec  start_peshell_main.bat  test_runner.lua  update_vendor.ps1
.github/workflows/: ci.yml  release.yml
docs/: lfs.txt  lua-ext.txt  lua-ffi-bindings.txt  luafilesystem.txt  luaunit.txt  penlight.txt  proc_utils.txt
prompt/: ai_correction_guidelines.md
scripts/: init.lua  prelude.lua  shutdown.lua  test_async.lua  test_guardian_init.lua  test_run.lua  test_suite.lua  test_unicode_fs.lua
scripts/core/: ffi.lua  log.lua  plugin.lua
scripts/pesh-api/: argparse.lua  async.lua  coro_pool.lua  ffi.lua  fs.lua  fs_async.lua  log.lua  pe.lua  process.lua  shell.lua  string.lua
scripts/pesh-api/winapi/: kernel32.lua  shell32.lua  user32.lua
scripts/plugins/async/: init.lua
scripts/plugins/coro_pool/: init.lua
scripts/plugins/fs/: init.lua
scripts/plugins/fs_async/: init.lua
scripts/plugins/pe/: init.lua
scripts/plugins/process/: init.lua
scripts/plugins/shell/: init.lua
scripts/plugins/shutdown/: init.lua
scripts/plugins/winapi/: advpack.lua  kernel32.lua  ole32.lua  shell32.lua  user32.lua
src/: logging.cpp  logging.h  main.cpp
